# plist2json

./: .coveragerc  LICENSE  README.md  publish.sh  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: coverage.yml
pkg/: __init__.py  __main__.py
tests/: README.md  __init__.py  test_plist2json.py
